# mcp_gateway

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md
.claude/skills/: security-code-review.md  security-incident.md  security-search-review.md
.sisyphus/: boulder.json
.sisyphus/notepads/arch-change-v2/: learnings.md
.sisyphus/plans/: dashboard-redesign.md  keycloak-auth-integration.md  security-persona-enhancement.md
architecture/: 01-system-architecture.md  02-data-flow.md  03-frontend-features.md  04-security-agent.md  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 77441780e195_initial_tables.py
backend/src/: config.py  main.py
backend/src/api/: audit.py  dashboard.py  deps.py  filters.py  logs.py  proxy.py  reports.py  users.py
backend/src/db/: models.py  seed.py  seed_sample.py  session.py
backend/src/gateway/: filter.py  proxy.py
backend/src/schemas/: audit.py  filters.py  logs.py
backend/tests/: conftest.py  test_api.py  test_filter.py
deploy/: .env.example  Containerfile.backend  Containerfile.frontend  podman-compose.yml
deploy/keycloak/: realm-export.json
deploy/nginx/: nginx.conf
deploy/tls/: generate-certs.sh
docs/: architecture.md  developer-notice.md  developer-setup.md  filter_rules.md  gateway-setup.md  product-specification.md  security-officer-manual.md
docs/security-agent-package/: README.md  opencode.json.patch
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
(+20 files in other folders)
